# pet-project-hotel

./: .env  Dockerfile  docker-compose.yml  pyproject.toml  pytest.ini
myhotel/: .gitignore  db.sqlite3  manage.py
myhotel/booking/: models.py  serializers.py  views.py
myhotel/catalog/: models.py  serializers.py  urls.py  views.py
myhotel/catalog/tests/: test_views.py
myhotel/myhotel/: asgi.py  settings.py  urls.py  wsgi.py
